@@ -226,7 +226,7 @@ int libcdatetime_elements_get_time_values(
      libcdatetime_elements_t *elements,
      uint8_t *hours,
      uint8_t *minutes,
-     uint8_t *secons,
+     uint8_t *seconds,
      libcdatetime_error_t **error );
 
 /* Sets the date and time elements to the current (system) date and time in UTC
