@@ -1,4 +1,4 @@
-.Dd January  4, 2015
+.Dd August 25, 2016
 .Dt libcdatetime 3
 .Os libcdatetime
 .Sh NAME
@@ -55,7 +55,7 @@ Date and time elements functions
 .Ft int
 .Fn libcdatetime_elements_get_nano_seconds "libcdatetime_elements_t *elements, uint16_t *nano_seconds, libcdatetime_error_t **error"
 .Ft int
-.Fn libcdatetime_elements_get_time_values "libcdatetime_elements_t *elements, uint8_t *hours, uint8_t *minutes, uint8_t *secons, libcdatetime_error_t **error"
+.Fn libcdatetime_elements_get_time_values "libcdatetime_elements_t *elements, uint8_t *hours, uint8_t *minutes, uint8_t *seconds, libcdatetime_error_t **error"
 .Ft int
 .Fn libcdatetime_elements_set_current_time_utc "libcdatetime_elements_t *elements, libcdatetime_error_t **error"
 .Ft int
