@@ -2,6 +2,7 @@ TODO:
 * Add WINVER < 0x0500 support
 * add a copy time elements from timestamp function?
 * clean up time elements string function, reuse code from libewf_date_time_values.c
+* add a set elements/timestamp function for testing?
 
 20160825
 * worked on tests
